@@ -233,4 +233,21 @@
     </processor>
   </updateRequestProcessorChain>
 
+  <updateRequestProcessorChain name="default-values">
+    <processor class="solr.DefaultValueUpdateProcessorFactory">
+      <str name="fieldName">processor_default_s</str>
+      <str name="value">X</str>
+    </processor>
+    <processor class="solr.DefaultValueUpdateProcessorFactory">
+      <str name="fieldName">processor_default_i</str>
+      <int name="value">42</int>
+    </processor>
+    <processor class="solr.UUIDUpdateProcessorFactory">
+      <str name="fieldName">uuid</str>
+    </processor>
+    <processor class="solr.TimestampUpdateProcessorFactory">
+      <str name="fieldName">timestamp</str>
+    </processor>
+  </updateRequestProcessorChain>
+
 </config>
